# excursor

./: .dockerignore  .gitignore  README.md  build.gradle.kts  gradle.properties  pixi.toml  pyproject.toml  settings.gradle
docker/: Dockerfile
docker/amazon/: Dockerfile
docker/builder/: Dockerfile
docker/debian/: Dockerfile
docker/excursor/: Dockerfile
docker/excursor/debian/: Dockerfile
docker/excursor/fedora/: Dockerfile
docker/fedora/: Dockerfile
excursor/: __init__.py  algos.py  data.py  func.py  learn_ray.py
excursor/core/: _process.py  _process_39.py  http.py  installer.py  installer_39.py  process.py  process_39.py
excursor/example_ds/: data1.ndjson  data1_pretty.json
gradle/wrapper/: gradle-wrapper.properties
notebooks/: algos.ipynb  python-management.ipynb  python-modern.ipynb  python-performance.ipynb  python-types.ipynb  rethink.ipynb
notebooks/blog/: surving_ai.md
notebooks/learn-code-assist/: local-llm.ipynb
notebooks/learn-ml/: attention.ipynb  ml.ipynb
notebooks/learn-mojo/: learn-mojo.ipynb  mojo-notes.md
notebooks/learn-python/: python-basics.ipynb  python-modern.ipynb  python-performance.ipynb  python-rust.ipynb
notebooks/learn-python/lesson1/: README.md  datetime-client.ipynb  datetime-service.ipynb  why_python.ipynb
notebooks/learn-python/lesson1/example_data/: data_gen.py  test-runs.parquet  test-runs2.parquet
notebooks/learn-python/lesson10_error_handling/: error-handling.ipynb
notebooks/learn-python/lesson11_advanced_types/: python-io.ipynb
notebooks/learn-python/lesson13_concurrency/: concurrency-in-python.ipynb
notebooks/learn-python/lesson14_python_tools_1/: tools-part-1.ipynb
notebooks/learn-python/lesson17_pytest/: all-about-pytest.ipynb
notebooks/learn-python/lesson19_dl_intro_ann/: dl-ann.ipynb
notebooks/learn-python/lesson1_why_python/: datetime-client.ipynb  datetime-service.ipynb  why_python.ipynb
notebooks/learn-python/lesson1_why_python/example_data/: data_gen.py  test-runs.ndjson  test-runs2.ndjson
notebooks/learn-python/lesson2/: why_python.ipynb
notebooks/learn-python/lesson20_dl_intro_cnn/: dl-cnn.ipynb
notebooks/learn-python/lesson21_dl_into_rnn/: dl-rnn.ipynb
notebooks/learn-python/lesson2_showcase/: query_engine.ipynb
notebooks/learn-python/lesson3_functions/: functions-scope.ipynb  functions.ipynb  namespaces-scope.ipynb
notebooks/learn-python/lesson4_advanced_functions/: adv-functions.ipynb  namespaces-scope.ipynb
notebooks/learn-python/lesson4_packaging/: packages-and-modules.ipynb
notebooks/learn-python/lesson5_advanced_functions/: higher-order.ipynb
notebooks/learn-python/lesson5_packaging/: packages-and-modules.ipynb
notebooks/learn-python/lesson6_classes/: classes.ipynb
notebooks/learn-python/lesson7_iterators/: generators.ipynb  interval_svc.ipynb  iterator.ipynb
notebooks/learn-python/lesson8_advanced_classes/: advanced-classes.ipynb
notebooks/learn-python/week1/: functions-scope.ipynb  service.py
notebooks/learn-python/week2/: interval_svc.ipynb
notebooks/learn-viz/: plotly.ipynb
notebooks/math/: algebra.ipynb  basics.ipynb  bayes.ipynb  calculus.ipynb  common_math.ipynb  lin_alg.ipynb  numpy.ipynb  ppl.ipynb  statistics.ipynb
notebooks/rust/: rust-advanced.ipynb
notebooks/scout/: ray_get_data.ipynb
src/excursor/: __init__.py  algos.py  func.py
src/excursor/core/: _process_39.py  installer_39.py
src/excursor/services/: datetime_svc.py
src/main/docker/: Dockerfile.jvm  Dockerfile.native
src/main/kotlin/app/khadga/: APIClient.kt  ExampleResource.kt
src/main/resources/: application.yaml
src/native-test/kotlin/app/khadga/: NativeExampleResourceIT.kt
src/test/kotlin/app/khadga/: ExampleResourceTest.kt
tests/: conftest.py  test_func.py  test_installer.py
