[tool.poetry]
name = "excursor"
version = "0.1.2"
description = ""
authors = ["Sean Toner <placeoftheway@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26"
sympy = "^1.12"
daak = "^0.1.1"

# serve: service deps
httpx = {version = "^0.24", optional = true}
fastapi = {version = "^0.101.1", optional = true}
uvicorn = {extras = ["standard"], version = "^0.23.2", optional = true}
pydantic = {version = "^2.4", optional = true}

# viz: visualization including jupyter
ipywidgets = {version = "^8.0", optional = true}
jupyterlab = {version = "^4.0", optional = true}
ipykernel = "^6.29.0"

# viz
holoviews = {extras = ["recommended"], version = "^1.18.1", optional = true}
plotly = {version = "^5.18.0", optional = true}
matplotlib = {version = "^3.8.3", optional = true}
seaborn = {version = "^0.13.2", optional = true}

# If you are on linux, uncomment the torch line below
#torch = {version = "^2.0.1+cpu", optional = true, source = "pytorch"}
torch = {version = "^2.2.1+cpu", optional = true}
# If you are not on a mac, comment this line out

# data: tools for data analytics, cleaning and ops
polars = {extras = ["numpy", "pandas", "pyarrow"], version = "^0.20.5", optional = true}
pyarrow = {version = "^15.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.286"
pytest = "^7.4"
autopep8 = "^2.0.4"
pycodestyle = "2.10.0"
pytest-asyncio = "^0.21.1"

[tool.poetry.extras]
viz = ["ipywidgets", "jupyterlab", "plotly", "holoviews", "matplotlib", "seaborn"]
ml = ["torch"]
serve = ["httpx", "fastapi", "uvicorn", "pydantic"]
data = ["polars", "pyarrow", "duckdb"]

[tool.poetry.scripts]
py-dev = {callable = "excursor.core.installer:main"}
py-dev39 = {callable = "excursor.core.installer_39:main"}

[[tool.poetry.source]]
name = "pytorch"
# url = "https://download.pytorch.org/whl/cpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
fix = true
line-length = 120
target-version = "py311"

[tool.autopep8]
max_line_length = 120
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3
exclude = "venv/"