[project]
name = "excursor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sean Toner", email = "placeoftheway@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "daak>=0.1.2",
    "daft>=0.4.14",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.2",
    "markupsafe>=3.0.2",
    "plotly>=6.0.1",
    "pydantic>=2.11.4",
    "pyro-ppl>=1.9.1",
    "sympy>=1.14.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = { index = "pytorch" }
markupsafe = { index = "pypi" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"


[[tool.uv.index]]
# Optional name for the index.
name = "pytorch"
# Required URL for the index.
url = "https://download.pytorch.org/whl/cu128"


[tool.ruff]
fix = true
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore =[
    "E731",
    "E402"
]

[tool.autopep8]
max_line_length = 120
ignore = "E501,W6"  # or["E501", "W6"]
in-place = true
recursive = true
aggressive = 3
exclude = "venv/"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
